--- a/source/index.html
+++ b/source/index.html
@@ -9,25 +9,25 @@
 
     <header class="page-header">
       <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="https://via.placeholder.com/102x84" width="102" height="84" alt="Логотип городка Седона">
+        <img src="https://via.placeholder.com/102x84" width="102" height="84" alt="Логотип городка Седона">
       </a>
-      <nav class="main-navigation">
-        <button class="main-navigation__toggle" type="button">
+      <nav class="navigation">
+        <button class="navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class="main-navigation__wrapper">
-          <ul class="main-navigation__list">
-            <li class="main-navigation__item">
-              <a href="#">Главная</a>
+        <div class="navigation__wrapper">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Главная</a>
             </li>
-            <li class="main-navigation__item">
-              <a href="catalog.html">Фото и видео</a>
+            <li class="navigation__item">
+              <a class="navigation__link" href="catalog.html">Фото и видео</a>
             </li>
-            <li class="main-navigation__item">
-              <a href="form.html">Форма отзыва</a>
+            <li class="navigation__item">
+              <a class="navigation__link" href="form.html">Форма отзыва</a>
             </li>
-            <li class="main-navigation__item">
-              <a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy</a>
+            <li class="navigation__item">
+              <a class="navigation__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy</a>
             </li>
           </ul>
         </div>
@@ -42,55 +42,53 @@
         <div class="attractor__wrapper">
           <img class="attractor__poster" src="https://via.placeholder.com/282x214" width="282" height="214" alt="Седона лучше, чем Гранд Каньон">
         </div>
-        <p class="attractor__about">Седона — небольшой<br> городок в Аризоне,<br> заслуживающий большего!</p>
+        <p class="attractor__about">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       </section>
 
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-        <p class="advantages__about">Рассмотрим 5 причин, по которым<br> Седона круче, чем Гранд Каньон!</p>
+        <p class="advantages__about">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         <ul class="advantages__list">
-          <li class="advantages__item advantages__item--foto">
+          <li class="advantages__item advantages__item--design">
             <h3 class="advantages__title">Настоящий городок</h3>
             <span class="advantages__number">— №1 —</span>
-            <p class="advantages__description">Седона - не аттракцион для туристов, там<br>течёт своя жизнь</p>
+            <p class="advantages__description">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             <img class="advantages__image" src="https://via.placeholder.com/320x262" width="320" height="262" alt="Фото городка Седона">
               <ul class="advantages__list">
                 <li class="advantages__item advantages__item--living">
                   <h4 class="advantages__title">Жильё</h4>
-                  <p class="advantages__description">Рекомендуем пожить в<br> настоящем мотеле, всё как в<br> кино!</p>
+                  <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                 </li>
                 <li class="advantages__item advantages__item--souveniers">
                   <h4 class="advantages__title">Сувениры</h4>
-                  <p class="advantages__description">Не только китайского, но и<br> местного производства!</p>
+                  <p class="advantages__description">Не только китайского, но и местного производства!</p>
                </li>
                 <li class="advantages__item advantages__item--food">
                  <h4 class="advantages__title">Еда</h4>
-                 <p class="advantages__description">Всегда заказывайте<br> фирменный бургер, вы не<br> разочаруетесь!</p>
+                 <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                </li>
             </ul>
           </li>
-          <li class="advantages__item advantages__item--foto">
-            <div class="advantages__item advantages__item--foto">
+          <li class="advantages__item advantages__item--design">
               <h3 class="advantages__title">Там есть мост дьявола</h3>
               <span class="advantages__number">— №2 —</span>
-              <p class="advantages__description">Да, по нему можно пройти! Если вы<br> осмелитесь, конечно</p>
-            </div>
+              <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             <img class="advantages__image" src="https://via.placeholder.com/320x262" width="320" height="262" alt="Фото моста дьявола городка Седона">
           </li>
-          <li class="advantages__item advantages__item--nofoto">
+          <li class="advantages__item advantages__item">
             <h3 class="advantages__title">Небольшая площадь</h3>
             <span class="advantages__number">— №3 —</span>
-            <p class="advantages__description">Все интересные места находятся<br> очень близко</p>
+            <p class="advantages__description">Все интересные места находятся очень близко</p>
           </li>
-          <li class="advantages__item advantages__item--nofoto">
+          <li class="advantages__item advantages__item">
             <h3 class="advantages__title">Красивая дорога</h3>
             <span class="advantages__number">— №4 —</span>
-            <p class="advantages__description">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+            <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages__item advantages__item--nofoto">
+          <li class="advantages__item advantages__item">
             <h3 class="advantages__title">Мало туристов</h3>
             <span class="advantages__number">— №5 —</span>
-            <p class="advantages__description">Большинство едет в Гранд Каньон<br>и толпится там</p>
+            <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ul>
       </section>
@@ -101,7 +99,7 @@
           Заинтересовались?
         </p>
         <p class="hotel-search__offer">
-          Укажите предполагаемые даты<br> поездки, и мы покажем вам лучшие<br> предложения гостиниц в Седоне
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
         <div class="hotel-search__wrapper">
           <a class="hotel-search__button" href="https://echo.htmlacademy.ru" target="_blank">Найти гостиницу</a>
@@ -136,10 +134,10 @@
         </div>
         <div class="page-footer__copyright">
           <h2 class="visually-hidden">О разработчике сайта</h2>
-          <p class="page-footer__developer-text">
+          <p class="copyright__text">
             разработано
           </p>
-          <a class="page-footer__developer-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy</a>
+          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy</a>
         </div>
       </div>
     </footer>
