--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 
     <header class="page-header">
       <a class="page-header__logo" href="#">
-        <img src="https://via.placeholder.com/102x84" width="102" height="84" alt="Логотип городка Седона">
+        <img class="logo__image" src="https://via.placeholder.com/102x84" width="102" height="84" alt="Логотип городка Седона">
       </a>
       <nav class="navigation">
         <button class="navigation__toggle" type="button">
