--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
   <body class="page__body">
 
     <header class="page-header">
-      <a class="page-header__logo" href="#">
+      <a class="logo" href="#">
         <img class="logo__image" src="https://via.placeholder.com/102x84" width="102" height="84" alt="Логотип городка Седона">
       </a>
       <nav class="navigation">
