--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   <body class="page__body">
 
     <header class="page-header">
-      <a class="logo" href="#">
+      <a class="page-header__logo logo" href="#">
         <img class="logo__image" src="https://via.placeholder.com/102x84" width="102" height="84" alt="Логотип городка Седона">
       </a>
       <nav class="navigation">
@@ -62,12 +62,12 @@
                 <li class="advantages__item advantages__item--souveniers">
                   <h4 class="advantages__title">Сувениры</h4>
                   <p class="advantages__description">Не только китайского, но и местного производства!</p>
-               </li>
+                </li>
                 <li class="advantages__item advantages__item--food">
-                 <h4 class="advantages__title">Еда</h4>
-                 <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-               </li>
-            </ul>
+                  <h4 class="advantages__title">Еда</h4>
+                  <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+              </ul>
           </li>
           <li class="advantages__item advantages__item--design">
               <h3 class="advantages__title">Там есть мост дьявола</h3>
