--- a/source/index.html
+++ b/source/index.html
@@ -37,12 +37,12 @@
     <main class="page-main">
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
 
-      <section class="attractor">
+      <section class="attractor-main">
         <h2 class="visually-hidden">Замечательный городок Седона</h2>
-        <div class="attractor__wrapper">
-          <img class="attractor__poster" src="https://via.placeholder.com/282x214" width="282" height="214" alt="Седона лучше, чем Гранд Каньон">
+        <div class="attractor-main__wrapper">
+          <img class="attractor-main__poster" src="https://via.placeholder.com/282x214" width="282" height="214" alt="Седона лучше, чем Гранд Каньон">
         </div>
-        <p class="attractor__about">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="attractor-main__about">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       </section>
 
       <section class="advantages">
