правки страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,50 +50,50 @@
         <div class="gallery__wrapper">
           <ul class="gallery__list">
             <li class="gallery__item gallery__item--designed">
-              <figure class="gallery__photo">
-                <img class="photo" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Закаты Седоны">
+              <figure class="gallery__photo photo">
+                <img class="photo__image" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Закаты Седоны">
                 <figcaption class="photo__description">
                   <h3 class="photo__title">Неродные просторы</h3>
                   <cite class="photo__author">Автор фото: Борис</cite>
                 </figcaption>
               </figure>
-              <div class="photo__likes">
+              <div class="photo__likes likes">
                 <span class="likes__number">1350</span>
               </div>
             </li>
             <li class="gallery__item">
-              <figure class="gallery__photo">
-                <img class="photo" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Растительность Седоны">
+              <figure class="gallery__photo photo">
+                <img class="photo__image" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Растительность Седоны">
                 <figcaption class="photo__description">
                   <h3 class="photo__title">Местная растительность</h3>
                   <cite class="photo__author">Автор фото: Сергей</cite>
                 </figcaption>
               </figure>
-              <div class="photo__likes">
+              <div class="photo__likes likes">
                 <span class="likes__number">143</span>
               </div>
             </li>
             <li class="gallery__item">
-              <figure class="gallery__photo">
-                <img class="photo" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Скальная дорога Седоны">
+              <figure class="gallery__photo photo">
+                <img class="photo__image" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Скальная дорога Седоны">
                 <figcaption class="photo__description">
                   <h3 class="photo__title">Дорога на север</h3>
                   <cite class="photo__author">Автор фото: Петр</cite>
                 </figcaption>
               </figure>
-              <div class="photo__likes">
+              <div class="photo__likes likes">
                 <span class="likes__number">96</span>
               </div>
             </li>
             <li class="gallery__item">
-              <figure class="gallery__photo">
-                <img class="photo" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Мост дьявола в Седоне">
+              <figure class="gallery__photo photo">
+                <img class="photo__image" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Мост дьявола в Седоне">
                 <figcaption class="photo__description">
                   <h3 class="photo__title">Мост дьявола</h3>
                   <cite class="photo__author">Автор фото: Антон</cite>
                 </figcaption>
               </figure>
-              <div class="photo__likes">
+              <div class="photo__likes likes">
                 <span class="likes__number">254</span>
               </div>
             </li>
@@ -109,11 +109,11 @@
         <p class="presentation-video__offer">
           Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
         </p>
-        <div class="presentation-video__wrapper">
-          <video src="https://via.placeholder.com/320x202" class="video" width="320" height="202" controls></video>
-          <div>
+        <div class="presentation-video__wrapper video">
+          <video src="https://via.placeholder.com/320x202" class="video__screen" width="320" height="202" controls></video>
+          <div class="video__wrapper"></div>
             <div class="video__remote"></div>
-            <div class="video__user-bar">
+            <div class="video__user-bar user-bar">
               <button class="user-bar__replay" type="button"></button>
               <button class="user-bar__closed-captions" type="button"></button>
               <button class="user-bar__full-screen" type="button"></button>
