--- a/source/index.html
+++ b/source/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -17,7 +18,7 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <div class="navigation__wrapper">
-          <ul class="navigation__list list-unstyled">
+          <ul class="navigation__list">
             <li class="navigation__item">
               <a class="navigation__link" href="#">Главная</a>
             </li>
@@ -49,23 +50,23 @@
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <p class="advantages__about">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-        <ul class="advantages__list list-unstyled">
+        <ul class="advantages__list">
           <li class="advantages__item advantages__item--design-photo">
             <h3 class="advantages__title advantages__title--design-photo">Настоящий городок</h3>
             <span class="advantages__number">— №1 —</span>
             <p class="advantages__description">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             <img class="advantages__image" src="img/photo-city-mobile.jpg" width="320" height="262" alt="Фото городка Седона">
           </li>
-          <li class="advantages__item advantages__item--base">
-            <h4 class="advantages__title advantages__title--base">Жильё</h4>
+          <li class="advantages__item">
+            <h4 class="advantages__title">Жильё</h4>
             <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
-          <li class="advantages__item advantages__item--base">
-              <h4 class="advantages__title advantages__title--base">Сувениры</h4>
+          <li class="advantages__item">
+              <h4 class="advantages__title">Сувениры</h4>
               <p class="advantages__description">Не только китайского, но и местного производства!</p>
           </li>
-          <li class="advantages__item advantages__item--base">
-              <h4 class="advantages__title advantages__title--base">Еда</h4>
+          <li class="advantages__item">
+              <h4 class="advantages__title">Еда</h4>
               <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="advantages__item advantages__item--design-photo">
@@ -119,7 +120,7 @@
         </div>
         <div class="page-footer__social social">
           <h2 class="visually-hidden">Подписывайтесь на нас в соц сетях</h2>
-          <ul class="social__list list-unstyled">
+          <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--twitter" href="#"><span class="visually-hidden">Twitter</span></a>
             </li>
