--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,7 +41,7 @@
 
       <div class="attractor">
         <div class="attractor__poster">
-          <img src="https://via.placeholder.com/230x40" width="230" height="40" alt="Седона">
+          <img src="./img/form-text-mobile.svg" width="230" height="40" alt="Седона">
         </div>
         <p class="attractor__title">Фото и видео</p>
         <p class="attractor__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
@@ -53,7 +53,7 @@
           <ul class="gallery__list">
             <li class="gallery__item gallery__item--designed">
               <figure class="gallery__photo photo">
-                <img class="photo__image" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Закаты Седоны">
+                <img class="photo__image" src="./img/tourist-photo-1-mobile.jpg" width="280" height="282" alt="Закаты Седоны">
                 <figcaption class="photo__description">
                   <h3 class="photo__title">Неродные просторы</h3>
                   <cite class="photo__author">Автор фото: Борис</cite>
@@ -65,7 +65,7 @@
             </li>
             <li class="gallery__item">
               <figure class="gallery__photo photo">
-                <img class="photo__image" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Растительность Седоны">
+                <img class="photo__image" src="./img/tourist-photo-2-mobile.jpg" width="280" height="282" alt="Растительность Седоны">
                 <figcaption class="photo__description">
                   <h3 class="photo__title">Местная растительность</h3>
                   <cite class="photo__author">Автор фото: Сергей</cite>
@@ -77,7 +77,7 @@
             </li>
             <li class="gallery__item">
               <figure class="gallery__photo photo">
-                <img class="photo__image" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Скальная дорога Седоны">
+                <img class="photo__image" src="./img/tourist-photo-3-mobile.jpg" width="280" height="282" alt="Скальная дорога Седоны">
                 <figcaption class="photo__description">
                   <h3 class="photo__title">Дорога на север</h3>
                   <cite class="photo__author">Автор фото: Петр</cite>
@@ -89,7 +89,7 @@
             </li>
             <li class="gallery__item">
               <figure class="gallery__photo photo">
-                <img class="photo__image" src="https://via.placeholder.com/280x282" width="280" height="282" alt="Мост дьявола в Седоне">
+                <img class="photo__image" src="./img/tourist-photo-4-mobile.jpg" width="280" height="282" alt="Мост дьявола в Седоне">
                 <figcaption class="photo__description">
                   <h3 class="photo__title">Мост дьявола</h3>
                   <cite class="photo__author">Автор фото: Антон</cite>
@@ -112,7 +112,7 @@
           Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
         </p>
         <div class="presentation-video__wrapper video">
-          <video src="https://via.placeholder.com/320x202" class="video__screen" width="320" height="202" controls></video>
+          <video src="./img/tourist-video-1-mobile.jpg" class="video__screen" width="320" height="202" controls></video>
           <div class="video__wrapper"></div>
             <div class="video__remote"></div>
             <div class="video__user-bar user-bar">
